# outlook-transcript-exporter

./: CHANGELOG  Email Search Script v1.0.153  Email Search Script v1.0.153.py  Email_Search_v1.0.174.py  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
outlook_exporter/: __init__.py  cli.py  config.py  gdrive.py  gpu_ocr.py  logger.py  main.py  outlook.py  pdf_utils.py
tests/: test_outlook_stub.py  test_pdf_utils.py
