[tool.poetry]
name = "outlook-exporter"
version = "0.2.0"
description = "Export, merge, and OCR Outlook mail threads into PDFs"
authors = ["Anthony DeLeon"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.12"

[tool.poetry.scripts]
outlook-exporter = "outlook_exporter.cli:app"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
