[tool.poetry]
name = "outlook-exporter"
version = "0.3.0"
description = "Export, merge, and OCR Outlook mail threads into PDFs"
authors = ["Anthony DeLeon"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.12"
pypdf = "^4.2"
PyMuPDF = "^1.23"
ocrmypdf = { version = "^14.0", optional = true }
easyocr = { version = "^1.7", optional = true }
cupy-cuda12x = { version = "*", optional = true, markers = "sys_platform == 'win32' or sys_platform == 'linux'" }

[tool.poetry.dev-dependencies]
ruff = "^0.4.4"
black = "^24.4"
pytest = "^8.1"

[tool.poetry.extras]
ocr = ["ocrmypdf"]
gpu = ["easyocr", "cupy-cuda12x"]

[tool.poetry.scripts]
outlook-exporter = "outlook_exporter.cli:app"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
